packages/errors/test/__snapshots__/CLOUD_PROTOCOL_CANNOT_UPLOAD_ARTIFACT.ansi
[31mWarning: We are unable to upload the Test Replay recording of this spec due to a missing or invalid upload URL.[39m
[31m[39m
[31mThese results will not display Test Replay recordings.[39m
[31m[39m
[31mThis error will not affect or change the exit code.[39m
[31m[39m